added a css rest for all browers

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,7 +3,7 @@
 
 //rem better support for accessibility
 
-
+//normaize.css library causes all browsers to render all elements more consistantly
 html {
     font-size: 62.5%;
 }
