--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,3 +14,12 @@ body {
     font-size: $m-size;
 }
 
+//big button
+button {
+    cursor: pointer;
+}
+
+button:disabled {
+    cursor: default;
+}
+
